# claude-agents

./: .env  .gitignore  CLAUDE.md  README.md  examples.py  fetch_google_alerts.py  fetch_weibo.py  fetch_weibo_simple.py  gmail-reader.skill  main.py  message_formatter.py  pyproject.toml  skill_wrapper.py  weather.skill
commodity_pipeline/: __init__.py  config.py  logger.py  models.py  pipeline.py
commodity_pipeline/output/: __init__.py  json_output.py  markdown.py  terminal.py
commodity_pipeline/skills/: __init__.py  base.py  china_futures.py  gmail.py  options_skill.py  scraper.py  technical_analysis.py
commodity_pipeline/stages/: __init__.py  alerts.py  news.py  options.py  position_review.py  screening.py  strategy.py  technical.py
commodity_pipeline/utils/: __init__.py  parsers.py
docs/plans/: 2024-12-30-commodity-pipeline-design.md  (+3 more)
examples/: practical_example.py  skill_wrapper_demo.py
reports/: 20251230_203842_pipeline.jsonl  20251230_222906_pipeline.jsonl  20251230_230218_pipeline.jsonl
tests/: __init__.py  test_config.py  test_config_review.py  test_integration.py  test_logger.py  test_models.py  test_models_holding.py  test_output_json.py  test_output_markdown.py  test_output_terminal.py  test_parsers.py  test_pipeline.py  test_skills_base.py  test_skills_china_futures.py  test_skills_gmail.py  test_skills_options.py  test_skills_scraper.py  test_skills_ta.py  test_stages_alerts.py  test_stages_news.py  test_stages_options.py  test_stages_position_review.py  test_stages_screening.py  test_stages_strategy.py  test_stages_technical.py
